--- a/.github/workflows/hawkeye.yml
+++ b/.github/workflows/hawkeye.yml
@@ -18,4 +18,5 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-      - hawkeye scan --target web/
+      - name: Hawkeye scanner
+        run: hawkeye scan --target web/
